[package]
name = "chaos-vk"
version = "0.1.0"
edition = "2021"
authors = ["Felipe <felipeguimaraesteodoro@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["graphics", "glfw", "vulkan"]
description = "Graphics framework tuned for chaos framework"
repository = "https://github.com/Felipe-Guimaraes-Teodoro/chaos-vk"

[dependencies]
ahash = "0.8.11"
bytemuck = "1.16.3"
glam = "0.29.0"
glfw = { version = "0.56.0", features = ["vulkan"] }
image = "0.25.2"
imgui = "0.12.0"
rayon = "1.10.0"
smallvec = "1.13.2"
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"
winapi = "0.3.9"
