[package]
name = "chaos-vk"
version = "0.1.2"
edition = "2021"
authors = ["Felipe <felipeguimaraesteodoro@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["graphics", "glfw", "vulkan"]
description = "Graphics framework tuned for chaos framework"
repository = "https://github.com/Felipe-Guimaraes-Teodoro/chaos-vk"

[dependencies]
winit = "0.28.0"
vulkano = "0.34.0"
vulkano-shaders = "0.34.0"
imgui = "0.12.0"
ahash = "0.8.11"
smallvec = "1.13.2"
glam = "0.29.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
bincode = "1.3.3"
